Add JDK 17 support.
Describe how cache-chroniclemap needs to be configured for JDK 17 (as
described in [1]).

[1] https://chronicle.software/chronicle-support-java-17/

Change-Id: I3e201d9638de7007aca2af10796a8ee1deb9d04c